--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-click==6.7
-Flask==0.12.2
-Flask-SQLAlchemy==2.2
-Flask-WTF==0.12
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-SQLAlchemy==1.1.10
-Werkzeug==0.12.2
-WTForms==2.1
+blinker==1.6.2
+click==8.1.3
+Flask==2.3.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Werkzeug==2.3.6
